# CapyCode

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  drizzle.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  ART_STYLE.md  CAPY_VOICE.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  secrets.rs
src/components/: CapySprite.tsx  ChatPanel.tsx  DevMoodMenu.tsx  SettingsPanel.tsx  SpeechBubble.tsx
src/db/: client.ts  migrate.ts  repo.ts  schema.ts
src/lib/: bridge.ts  moodMachine.ts
src/lib/ai/: context.ts  contextConfig.ts  provider.ts
src/store/: capyStore.ts
src/styles/: globals.css
