[package]
name = "capycode"
version = "0.1.0"
description = "CapyCode — a cozy AI coding companion"
authors = ["CapyCode contributors"]
license = "MIT"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3.5", features = ["windows-native"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
